revert: undo erroneous fix commits on main (applied correctly on fix/dimensiones-limitadas)

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -259,7 +259,9 @@
 
         // Add click listener to activate this window
         item.onclick = async () => {
-          await activateWindow(win.hwnd);
+          if (!isActive) {
+            await activateWindow(win.hwnd);
+          }
         };
 
         const title = document.createElement('span');
