--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -566,8 +566,17 @@
 
     stackTitle.addEventListener('paste', (e) => {
       e.preventDefault();
-      const text = (e.clipboardData || window.clipboardData).getData('text/plain');
-      document.execCommand('insertText', false, text.substring(0, 100));
+      const text = (e.clipboardData || window.clipboardData).getData('text/plain').substring(0, 100);
+      const selection = window.getSelection();
+      if (selection.rangeCount > 0) {
+        const range = selection.getRangeAt(0);
+        range.deleteContents();
+        range.insertNode(document.createTextNode(text));
+        // Move cursor to end of inserted text
+        range.collapse(false);
+        selection.removeAllRanges();
+        selection.addRange(range);
+      }
     });
 
     async function saveStackTitle() {
@@ -767,8 +776,17 @@
 
           displayName.addEventListener('paste', (e) => {
             e.preventDefault();
-            const text = (e.clipboardData || window.clipboardData).getData('text/plain');
-            document.execCommand('insertText', false, text.substring(0, 200));
+            const text = (e.clipboardData || window.clipboardData).getData('text/plain').substring(0, 200);
+            const selection = window.getSelection();
+            if (selection.rangeCount > 0) {
+              const range = selection.getRangeAt(0);
+              range.deleteContents();
+              range.insertNode(document.createTextNode(text));
+              // Move cursor to end of inserted text
+              range.collapse(false);
+              selection.removeAllRanges();
+              selection.addRange(range);
+            }
           });
 
           // Only prevent click propagation (window activation) when rename mode is on
@@ -1025,6 +1043,7 @@
 
     // Initial load
     async function init() {
+      window.electronAPI.removeAllStateListeners();
       await Promise.all([refreshManaged(), refreshAvailable()]);
     }
 
