--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -421,6 +421,10 @@
           <label class="dims-input-label">GAP</label>
           <input type="number" id="stackGapInput" min="0" max="500" step="10" placeholder="0">
         </div>
+        <div class="dims-field">
+          <label class="dims-input-label">TOP</label>
+          <input type="number" id="topOffsetInput" min="0" max="500" step="10" placeholder="0">
+        </div>
       </div>
       <div class="dims-row dims-inputs hidden" id="dimsButtons">
         <button class="btn btn-add" id="applyDimsBtn" onclick="applyCustomDimensions()">Apply</button>
@@ -520,13 +524,15 @@
       const w = parseInt(document.getElementById('customWidthInput').value);
       const h = parseInt(document.getElementById('customHeightInput').value);
       const gap = parseInt(document.getElementById('stackGapInput').value);
-      if (!w || w < 200 || !h || h < 200) {
-        return; // Don't apply invalid values
-      }
+      const top = parseInt(document.getElementById('topOffsetInput').value);
+      if (!w || w < 200 || !h || h < 200) { return; }
       try {
         await window.electronAPI.setCustomDimensions(w, h);
         if (!isNaN(gap) && gap >= 0) {
           await window.electronAPI.setStackGap(gap);
+        }
+        if (!isNaN(top) && top >= 0) {
+          await window.electronAPI.setTopOffset(top);
         }
       } catch (e) {
         console.error('Failed to set custom dimensions:', e);
@@ -537,9 +543,11 @@
       try {
         await window.electronAPI.setCustomDimensions(null, null);
         await window.electronAPI.setStackGap(0);
+        await window.electronAPI.setTopOffset(0);
         document.getElementById('customWidthInput').value = '';
         document.getElementById('customHeightInput').value = '';
         document.getElementById('stackGapInput').value = '';
+        document.getElementById('topOffsetInput').value = '';
         document.getElementById('customSizeToggle').checked = false;
         document.getElementById('dimsInputs').classList.add('hidden');
         document.getElementById('dimsButtons').classList.add('hidden');
@@ -1034,6 +1042,12 @@
             if (gapInput && document.activeElement !== gapInput) {
               gapInput.value = data.stackGap || "";
             }
+          }
+
+          // Sync topOffset
+          const topInput = document.getElementById('topOffsetInput');
+          if (topInput) {
+            topInput.value = data.topOffset || '';
           }
 
           if (data.backgroundColor) {
